# docker-voltronic-homeassistant

./: README.md  config.yaml
config/: inverter.conf
sources/inverter-cli/: CMakeLists.txt  inputparser.h  inverter.cpp  inverter.h  main.cpp
sources/inverter-mqtt/: entrypoint.sh
